--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,16 @@
 body {
-  background: linear-gradient(to left, rgb(26, 26, 224), #e5f04d);
-  font-family: "Times New Roman", Times, serif;
+  background-image: url('../img/mood-generator-bg.png');
+  background-size: cover;
+  font-family: 'Times New Roman', Times, serif;
   color: rgb(255, 255, 255);
-
 }
-
-
 
 header {
   /* background-color: lightslategray; */
   height: 100px;
 }
 
-nav{
+nav {
   margin-left: 90px;
 }
 
@@ -22,17 +20,16 @@ nav ul {
   margin: 20px;
 }
 
-nav ul li{
+nav ul li {
   font-size: 1.5em;
 }
 
-
-h1, h2, h3 {
-  font-family: 'Poppins', sans-serif; 
+h1,
+h2,
+h3 {
+  font-family: 'Poppins', sans-serif;
   color: white;
 }
-
-
 
 a {
   text-transform: uppercase;
@@ -42,22 +39,19 @@ a {
   transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
-a:hover{
+a:hover {
   color: #111;
   transform: scale(1.2);
 }
 
-.navbar-nav li:hover{
+.navbar-nav li:hover {
   color: #111;
   transform: scale(1.2);
   text-shadow: none;
   background-color: #ddd;
   border: #e5f04d ridge;
   border-width: 5px;
-  
 }
-
-
 
 h1 {
   background-color: inherit;
@@ -67,8 +61,7 @@ h1 {
   margin-bottom: 50px;
 }
 
-
-main>h2 {
+main > h2 {
   font-size: 1.75em;
   width: max-content;
   padding: 30px;
@@ -76,7 +69,7 @@ main>h2 {
   margin-bottom: 10px;
 }
 
-main>div>article>h2 {
+main > div > article > h2 {
   text-decoration-line: none;
   font-size: 1.55em;
   width: max-content;
@@ -128,7 +121,6 @@ ul {
 li {
   font-size: 1.5 em;
   margin-top: 15px;
-
 }
 
 img {
@@ -142,7 +134,6 @@ img {
   width: 10%;
   padding: 10px;
 }
-
 
 button {
   background-color: rgba(83, 129, 235, 0.727);
@@ -160,7 +151,7 @@ button {
   cursor: pointer;
 }
 
-.btn:hover{
+.btn:hover {
   opacity: 1;
 }
 
@@ -190,41 +181,40 @@ form {
   gap: 2rem;
 }
 
-fieldset>label {
+fieldset > label {
   width: 400px;
-  margin:auto;
+  margin: auto;
   margin-bottom: 5px;
 }
 
-fieldset>input {
+fieldset > input {
   width: 400px;
-  margin:auto;
+  margin: auto;
   padding: 5px;
   margin-bottom: 15px;
 }
 
-
-form label{
+form label {
   font-size: larger;
   margin-top: 30px;
 }
 
-select{
+select {
   margin-left: 180px;
 }
 
-
-select, option{
+select,
+option {
   width: 300px;
 }
 
-h3{
- text-align: center;
- margin-top: 10px;
+h3 {
+  text-align: center;
+  margin-top: 10px;
 }
 
 /* Start of box animation. Assistance by: Youtube video: Animated Background with Pure CSS and Html by Divinector */
-.box-area li{
+/* .box-area li {
   position: absolute;
   display: block;
   list-style: none;
@@ -235,74 +225,69 @@ h3{
   bottom: -300px;
 }
 
-.box-area li:nth-child(1){
+.box-area li:nth-child(1) {
   left: 86%;
   width: 80px;
   height: 80px;
   animation-delay: 0s;
 }
 
-.box-area li:nth-child(2){
+.box-area li:nth-child(2) {
   left: 5%;
   width: 30px;
   height: 30px;
   animation-delay: 1.5s;
-  animation-duration:10s;
+  animation-duration: 10s;
 }
 
-.box-area li:nth-child(3){
+.box-area li:nth-child(3) {
   left: 70%;
   width: 100px;
   height: 100px;
   animation-delay: 5.5s;
-  
 }
 
-.box-area li:nth-child(4){
+.box-area li:nth-child(4) {
   left: 70%;
   width: 150px;
   height: 150px;
   animation-delay: 0s;
   animation-duration: 15s;
-  
 }
 
-.box-area li:nth-child(5){
+.box-area li:nth-child(5) {
   left: 80%;
   width: 40px;
   height: 40px;
   animation-delay: 0s;
 }
 
-.box-area li:nth-child(6){
+.box-area li:nth-child(6) {
   left: 15%;
   width: 110px;
   height: 110px;
   animation-delay: 3.5s;
 }
 
-
-@keyframes animate{
-  0%{
+@keyframes animate {
+  0% {
     transform: translateY(0) rotate(0deg);
     opacity: 1;
   }
-  100%{
+  100% {
     transform: translateY(-800px) rotate(360deg);
     opacity: 0;
   }
-}
+} */
 
 footer {
   display: flex;
-  font-size: 0.90em;
+  font-size: 0.9em;
   height: 100px;
-  background: linear-gradient(to left, rgb(26, 26, 224), #e5f04d);
   margin-top: 15px;
   border-top: #3a393b;
   border-style: solid;
   border-width: thin;
-
 }
 
 footer h2 {
@@ -310,6 +295,6 @@ footer h2 {
   margin: auto;
 }
 
-footer audio{
+footer audio {
   padding-top: 20px;
 }
